--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.3.2",
     "magic-sdk": "^21.5.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
